Getmeal in daterange
