# docs/swagger.json
@@ -3170,7 +3170,7 @@
                 "menu_sets": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/model.MealEventMenuSet"
+                        "$ref": "#/definitions/model.MealEventSet"
                     }
                 },
                 "name": {
@@ -3228,7 +3228,7 @@
                 }
             }
         },
-        "model.MealEventMenuSet": {
+        "model.MealEventSet": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -3539,10 +3539,10 @@
                 "is_active": {
                     "type": "boolean"
                 },
-                "meal_event_menu_sets": {
+                "meal_event_sets": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/model.MealEventMenuSet"
+                        "$ref": "#/definitions/model.MealEventSet"
                     }
                 },
                 "menu_set_description": {
